# AVSR

./: .gitignore  CMakeLists.txt  README.md  package.xml  pcl_to_array.py
launch/: simulation.launch
meshes/cubesat/: cubesat.dae
plugin/: OrbitWorldPlugin.cpp
urdf/: cubesat.urdf.xacro  cubesat_base.urdf.xacro
worlds/models/cubesat/: model.config  model.sdf
worlds/models/cubesat/meshes/: cubesat.blend  cubesat.dae
worlds/models/cubesat1/: model.config  model.sdf
worlds/models/cubesat1/meshes/: cubesat1.dae
worlds/models/earth/: model.config  model.sdf
worlds/models/earth/meshes/: earth.blend  earth.dae
worlds/models/kinect_ros/: model.sdf
worlds/models/space/: model.config  model.sdf
worlds/models/space/materials/scripts/: space.material
worlds/models/sun1/: model.config  model.sdf
worlds/orbit_world/: orbit_world.world
